新章节《性与信息》；更新横幅和站点地图。

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 .pa-bg {
     background-image: url('./main/puberty-and-adolescence/source/pa-cover.jpg');
 }
+.si-bg {
+    background-image: url('./main/sex-and-information/source/si-bg.jpg');
+}
 	</style>
 </head>
 
@@ -149,14 +152,13 @@
 	</nav>
 
 			    <div class="main">
-                                <p class="bg-light tip-bar"><span class="darkmode-ignore">😔</span> 由于<a href="https://post.knowsex.net/archives/trademark-dispute">收到诉讼</a>，目前网站资金出现赤字。如果您觉得网站内容对您有帮助，请考虑<a href="/sub/Encourage.html" style="text-decoration:underline">支持</a>网站的维护与运营。</p>
-        <p class="bg-light tip-bar" style="text-align: left;">
+                                        <p class="bg-light tip-bar" style="text-align: left;">
             <span class="darkmode-ignore">🔖</span> 请收藏我们的网址 <code>knowsex.net</code> 以备不时之需。<a href="https://post.knowsex.net/archives/how-to-visit-again">了解如何再度访问...</a>
         </p>
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-10-12</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-11-16</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
@@ -220,6 +222,17 @@
       <div class="header-title">
         <h1>性传播疾病</h1>
         <p aria-hidden="true">Sexually Transmitted Diseases</p>
+      </div>
+    </div>
+  </a>
+</div>
+        <div class="header-thumb">
+  <a href="main/sex-and-information">
+    <div class="header-img si-bg"></div>
+    <div class="header-cover">
+      <div class="header-title">
+        <h1>性与信息</h1>
+        <p aria-hidden="true">Sex and Information</p>
       </div>
     </div>
   </a>
