--- a/main/sex-and-information/index.html
+++ b/main/sex-and-information/index.html
@@ -5,12 +5,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性取向,性教育,KnowSex,生理知识,性科普,性知识,青少年性教育,生理健康,生理卫生,性卫生,性教育文章,生殖器插图,生殖器图片,性病,性传播疾病">
-	<meta name="description" content="有关性取向的简要说明。">
+	<meta name="keywords" content="媒介素养,信息素养,信息与媒介素养,性和信息,性教育,KnowSex,生理知识,性科普,性知识,青少年性教育,生理健康,生理卫生,性卫生,性教育文章,生殖器插图,生殖器图片,性病,性传播疾病">
+	<meta name="description" content="在浩如烟海的信息中筛选出有价值的信息、辨别虚假信息。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
-	<meta property="og:title" content="性取向" />
-	<meta property="og:description" content="有关性取向的简要说明。" />
+	<meta property="og:title" content="性和信息" />
+	<meta property="og:description" content="在浩如烟海的信息中筛选出有价值的信息、辨别虚假信息。" />
 	<meta property="og:locale" content="zh_CN" />
 	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
@@ -23,7 +23,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>性取向 - KnowSex</title>
+	<title>性和信息 - KnowSex</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -35,9 +35,13 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="/style/style.min.css?202308">
 	<script async src="https://analytics.knowsex.net/script.js" data-website-id="74452ede-6372-4bf7-9f03-b9ecbe2f7978"></script>
-	<link rel="canonical" href="https://knowsex.net/main/sexual-orientation/"/>
+	<link rel="canonical" href="https://knowsex.net/main/sex-and-information/"/>
 	<style>
-					</style>
+		
+.si-bg {
+  background-image: url('source/si-bg.jpg');
+}
+	</style>
 </head>
 
 <body>
@@ -141,97 +145,77 @@
 
 			<article itemscope itemtype="http://schema.org/Article">
 			<div class="header-thumb">
-				<div class="header-img no3"></div>
+				<div class="header-img si-bg"></div>
 				<div class="header-cover">
 					<div class="header-title">
-						<h1 itemprop="headline">性取向</h1>
-						<p>Sexual Orientation</p>
+						<h1 itemprop="headline">性和信息</h1>
+						<p>Sex and Information</p>
 					</div>
 				</div>
 			</div>
 			<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 			<div class="main">
-					<p>性取向是指一个人对某性别产生的持久情感、喜爱、爱情或性吸引的现象。<sup id="cite_ref-深入理解性傾向和同性戀" class="reference"><a href="#cite_note-深入理解性傾向和同性戀" target="_self" aria-label="佐证资料">[3]</a></sup>通常，性取向可归纳为<strong>异性恋</strong>、<strong>同性恋</strong>和<strong>双性恋</strong>，而<strong>无性恋</strong>有时被视作性取向的第四类别、有时认为其是&ldquo;没有性取向&rdquo;的现象。 这里的“异性”等中的“性”指的是自身的<strong>性别认同</strong>中的性别。</p>
-	<p><span class="key">同性恋及双性恋、无性恋倾向均不是疾病或性功能障碍。</span><sup id="cite_ref-青春期发育" class="reference"><a href="#cite_note-青春期发育" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-深入理解性傾向和同性戀" class="reference"><a href="#cite_note-深入理解性傾向和同性戀" target="_self" aria-label="佐证资料">[3]</a></sup></p>
-	<p>性取向并非一成不变，例如一些尝试过同性恋关系的人或许会不再对同性恋产生兴趣。<sup id="cite_ref-青春期发育" class="reference"><a href="#cite_note-青春期发育" target="_self" aria-label="佐证资料">[1]</a></sup></p>
-	<p class="key">性取向是平等且自由的。</p>
-	<p>性取向可由一些问卷做参考。</p>
-	<p><a class="btn btn-outline-secondary" href="https://www.idrlabs.com/cn/sexual-orientation/test.php"  role="button">性取向测试</a></p>
-	<p><small>测试结果仅供个人参考。受网络环境影响，您有可能无法直接打开该链接。该链接不属于 KnowSex 。</small></p>
-	 <h2>异性恋简述</h2>
-	<p>异性恋一般指对异性（包括自身<strong>生理性别</strong>及<strong>性别认同</strong>为当事人的异性）能产生爱慕感、建立浪漫关系，或认为异性拥有性吸引力的一种现象。</p>
-	<p>不论社会文化背景如何，当中大多数人都是异性恋者，而异性性行为是迄今为止最常见的<a href="../sexual-activity" target="_self">性行为</a>类型。<sup id="cite_ref-异性恋" class="reference"><a href="#cite_note-异性恋" target="_self" aria-label="佐证资料">[7]</a></sup></p>
-	 <h2>同性恋简述</h2>
-	<p>同性恋是以同样的性别或<strong>社会性别</strong>为对象建立起浪漫吸引、性吸引或<a href="../sexual-activity" target="_self">性行为</a>的亲密关系，或以此性倾向做主要自我认同的现象。</p>
-	<p>男同性恋者在英文中通常以“Gay”称，女同性恋者通常以“Lesbian”称（有时根据其单词发音会以“蕾丝”“蕾丝边”“拉拉”等词汇代指）。</p>
-	 <h2>双性恋简述</h2>
-	<p>双性恋，一般指能对男性和女性皆产生爱慕感、建立浪漫关系，或认为两者皆有性吸引力的一种现象。</p>
-	<p>研究证实双性恋也可作为一种过渡性的性倾向认同。<sup id="cite_ref-双性恋" class="reference"><a href="#cite_note-双性恋" target="_self" aria-label="佐证资料">[5]</a></sup></p>
-	 <h2>泛性恋简述</h2>
-	<p>泛性恋是指对任何生理性别、社会性别皆产生爱慕感、建立浪漫关系的现象。</p>
-	<p>和双性恋有所不同，泛性恋不对性别做区分，这超出二元性别之外。</p>
-	 <h2>无性恋简述</h2>
-	<p>无性恋是指认为他人缺乏性吸引力，或是缺乏或有着低度性欲的状态。</p>
-	<p>不同于性欲机能减退障碍，无性恋者一般不会因为性方面的事情感到显著的痛苦、感到具有社交困难，或是缺少性刺激。无性恋被认为是持久的无法感受到性吸引。</p>
-	
-	 <h2>LGBT</h2>
-	<p>LGBT是<strong>女同性恋者</strong>（<strong>L</strong>esbian）、<strong>男同性恋者</strong>（<strong>G</strong>ay）、<strong>双性恋者</strong>（<strong>B</strong>isexual）与<strong>跨性别者</strong>（<strong>T</strong>ransgender）的英文首字母缩略字。</p>
-	<p>LGBT通常会使用<strong>LGBT骄傲旗帜</strong>（彩虹旗）作为标志。</p>
-
-	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 777 480">
-		<rect fill="#750787" width="777" height="480"/>
-		<rect fill="#004dff" width="777" height="400"/>
-		<rect fill="#008026" width="777" height="320"/>
-		<rect fill="#ffed00" width="777" height="240"/>
-		<rect fill="#ff8c00" width="777" height="160"/>
-		<rect fill="#e40303" width="777" height="80"/>
-	</svg>
-	<br>
-	<small>图 1 LGBT 骄傲旗帜</small>
-	<h2>性取向偏见</h2>
-	<p>由于历史、社会环境、文化等因素，对性取向的偏见在不同程度上存在于各个社会中，是指对某性取向的人群持有仇恨、歧视的现象。</p>
-	<p>性取向自由是人权的一部分，人人享有性取向的自由。各司法管辖区应有禁止基于性取向歧视的法律法规，充分保障公民的基本人权。<sup id="cite_ref-情况介绍" class="reference"><a href="#cite_note-情况介绍" target="_self" aria-label="佐证资料">[9]</a></sup><sup id="cite_ref-生而自由一律平等" class="reference"><a href="#cite_note-生而自由一律平等" target="_self" aria-label="佐证资料">[10]</a></sup></p>
-	<div class="hr"></div>
-	<p>本节正文内容已结束。</p>
+				
+<p>通过互联网、书刊、电视等渠道可以轻松地获取到各种各样的信息，但这些信息的质量参差不齐。我们需要在这些信息中筛选出有价值的信息、辨别虚假信息。</p>
+<p>作为信息的一种，在生活中我们可能会接触到色情作品。色情作品并非适合所有人，可能给儿童带来不利影响。色情作品有时候会作为性教育的来源，这是不可靠的。</p>
+<p>在使用社交媒体时，也有可能会遭遇网络上的不希望的性关注。我们需要采取一些手段应对这些问题。</p>
+<h2>信息的真伪</h2>
+<p>并非所有的信息都是可靠的。<span class="key">即使看上去正规正式的官方账号，也可能有意无意散播出虚假信息。</span>一些信息表达的观点可能为作者或背后的立场服务。这些信息难免不够中立，存在偏颇。</p>
+<p>判断信息的真伪，可以通过查看信息的来源判断是否可靠。</p>
+<p>一个真实的信息应当能够在<strong>可靠来源</strong>中得到验证。对于性有关的信息，可靠来源包括但不限于以下几种：</p>
+<ul>
+<li>卫生组织、国家卫生部门等等。例如世界卫生组织、国家疾控中心</li>
+<li>专业的医学协会、医学机构。例如<a href="https://www.msdmanuals.cn/home">默沙东诊疗手册</a>、<a href="https://www.mayoclinic.org/zh-hans/diseases-conditions">妙佑妙佑医疗国际的健康资料库</a></li>
+<li>专业医学界和学术界的专家审查的性健康书籍和期刊</li>
+<li>来自心理学和社会科学领域的研究资料</li>
+</ul>
+<p>避免从未经验证的社交媒体账号、个人博客、以及未知来源的网站获取性教育信息，也不要相信一些新闻网站上不明身份的自媒体账号，因为这些信息人人都可发布，可能不准确、不全面，甚至可能带有偏见。</p>
+<h2>色情作品与性教育</h2>
+<p>色情作品一般是为达到性刺激而描绘裸体、性行为的材料。<sup id="cite_ref-cornell" class="reference"><a href="#cite_note-cornell" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-USGOV" class="reference"><a href="#cite_note-USGOV" target="_self" aria-label="佐证资料">[2]</a></sup>作品有多种表达方式，如图像、视频、音频、文字、电子游戏等。</p>
+<p>儿童接触到露骨的色情作品，对其心理健康不利。年龄较小的儿童（9 ~ 12 岁）容易因色情作品感到不安。不应让儿童接触到色情作品。 <sup id="cite_ref-AUGOV" class="reference"><a href="#cite_note-AUGOV" target="_self" aria-label="佐证资料">[3]</a></sup><sup id="cite_ref-UNICEF" class="reference"><a href="#cite_note-UNICEF" target="_self" aria-label="佐证资料">[4]</a></sup></p>
+<p><span class="key">从色情作品中获取性教育信息是不当的。</span>色情作品也通常是性相关信息的来源，但并不是可靠来源。为达到视觉效果，一些色情内容呈现的性相关信息并不像真实情况。这些内容可能包含错误地性知识、有害的社会性别刻板印象，使观众对性行为、性反应和身体外表有不切实际的认知和期望。</p>
+<p>正如动画片、电影、小说中可能会描绘夸张的情节，不能与现实生活相提并论，色情作品也是如此。色情作品中所描绘的性的标准未必适用于现实生活。</p>
+<p>在不同的司法管辖区，色情作品的法律地位不同，受到不同程度的管制。这与当地历史、文化、宗教、政治、社会环境、色情作品的内容接受度等因素有关。</p>
+<h2>社交媒体与性骚扰</h2>
+<p>在社交媒体上，我们可能会遇到一些不希望的性关注。这种性关注有一部分属于性骚扰。</p>
+<p>如果你不愿意，没有人有权利触碰你。在互联网上也应当如此。<strong>接收到不被希望的性关注时，并不是你的错。</strong></p>
+<p>不要对他人送去不被希望的性关注，在互联网上也要与他人保持界限。同样地，如果有人对你送来不被希望的性关注，你也有权利拒绝。拉黑、举报这些消息，涉及违法犯罪时可以向警方和法院寻求帮助。</p>
+<p>你也可以和你信任的成年人谈论这些问题，以得到帮助。</p>
 
 								<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-					 <h2 class="reference">参考资料</h2>
+					
+<h2 class="reference">参考资料</h2>
 <ol class="reference-list">
-	<li id="cite_note-青春期发育"><span class="mw-cite-backlink"><b><a href="#cite_ref-青春期发育" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">Evan G. Graber,青春期发育[G/OL]. 默沙东诊疗手册大众版, 2021(202104)[2022-06-14].&nbsp;<a href="https://www.msdmanuals.cn/home/children-s-health-issues/growth-and-development/adolescent-development">https://www.msdmanuals.cn/home/children-s-health-issues/growth-and-development/adolescent-development</a></span></li>
-<li id="cite_note-性概述"><span class="mw-cite-backlink"><b><a href="#cite_ref-性概述" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">George R. Brown,性概述[G/OL]. 默沙东诊疗手册大众版, 2021(202104)[2022-06-14].&nbsp;<a href="https://www.msdmanuals.cn/home/special-subjects/sexuality/overview-of-sexuality">https://www.msdmanuals.cn/home/special-subjects/sexuality/overview-of-sexuality</a></span></li>
-<li id="cite_note-深入理解性傾向和同性戀"><span class="mw-cite-backlink"><b><a href="#cite_ref-深入理解性傾向和同性戀" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">美国心理学会.解答你的問題：深入理解性傾向和同性戀[Z/OL] . (2008)[2014].&nbsp;<a href="http://www.apa.org/topics/lgbt/chinese-orientation.pdf">http://www.apa.org/topics/lgbt/chinese-orientation.pdf</a></span></li>
-<li id="cite_note-无性恋"><span class="mw-cite-backlink"><b><a href="#cite_ref-无性恋" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 無性戀[G/OL]. 维基百科, 2022(20220606)[2022-06-06].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E7%84%A1%E6%80%A7%E6%88%80&oldid=72032771">https://zh.wikipedia.org/w/index.php?title=%E7%84%A1%E6%80%A7%E6%88%80&oldid=72032771</a></span></li>
-<li id="cite_note-双性恋"><span class="mw-cite-backlink"><b><a href="#cite_ref-双性恋" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 双性恋[G/OL]. 维基百科, 2022(20220606)[2022-06-06].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E5%8F%8C%E6%80%A7%E6%81%8B&oldid=72032799">https://zh.wikipedia.org/w/index.php?title=%E5%8F%8C%E6%80%A7%E6%81%8B&oldid=72032799</a></span></li>
-<li id="cite_note-同性恋"><span class="mw-cite-backlink"><b><a href="#cite_ref-同性恋" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 同性戀[G/OL]. 维基百科, 2022(20220530)[2022-05-30].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E5%90%8C%E6%80%A7%E6%88%80&oldid=71914359">https://zh.wikipedia.org/w/index.php?title=%E5%90%8C%E6%80%A7%E6%88%80&oldid=71914359</a></span></li>
-<li id="cite_note-异性恋"><span class="mw-cite-backlink"><b><a href="#cite_ref-异性恋" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 异性恋[G/OL]. 维基百科, 2022(20220524)[2022-05-24].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E5%BC%82%E6%80%A7%E6%81%8B&oldid=71792586">https://zh.wikipedia.org/w/index.php?title=%E5%BC%82%E6%80%A7%E6%81%8B&oldid=71792586</a></span></li>
-<li id="cite_note-泛性恋"><span class="mw-cite-backlink"><b><a href="#cite_ref-泛性恋" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 泛性戀[G/OL]. 维基百科, 2022(20220322)[2022-03-22].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E6%B3%9B%E6%80%A7%E6%88%80&oldid=70752309">https://zh.wikipedia.org/w/index.php?title=%E6%B3%9B%E6%80%A7%E6%88%80&oldid=70752309</a></span></li>
-<li id="cite_note-情况介绍"><span class="mw-cite-backlink"><b><a href="#cite_ref-情况介绍" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">联合国自由与平等运动. 国际人权法与性取向和性别认同. 联合国, [2023-11-16].&nbsp;<a href="https://www.ohchr.org/sites/default/files/Documents/Issues/Discrimination/LGBT/FactSheets/unfe-11-UN_Fact_Sheets_GenderIdentity_Chinese.pdf">https://www.ohchr.org/sites/default/files/Documents/Issues/Discrimination/LGBT/FactSheets/unfe-11-UN_Fact_Sheets_GenderIdentity_Chinese.pdf</a></span></li>
-<li id="cite_note-生而自由一律平等"><span class="mw-cite-backlink"><b><a href="#cite_ref-生而自由一律平等" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">人权高专办. 生而自由、一律平等：国际人权法中的性取向和性别认同. 联合国, 2013[2023-11-16]</span></li>
+    <li id="cite_note-cornell"><span class="mw-cite-backlink"><b><a href="#cite_ref-cornell" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">LII / Legal Information Institute. pornography. Cornell Law School. (2020-07)[2023-11-11].&nbsp;<a href="https://www.law.cornell.edu/wex/pornography">https://www.law.cornell.edu/wex/pornography</a></span></li>
+<li id="cite_note-USGOV"><span class="mw-cite-backlink"><b><a href="#cite_ref-USGOV" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">Criminal Division. Citizen's Guide To U.S. Federal Law On Obscenity. U.S. Department of Justice. (2023-08-11)[2023-11-11].&nbsp;<a href="https://www.justice.gov/criminal/criminal-ceos/citizens-guide-us-federal-law-obscenity">https://www.justice.gov/criminal/criminal-ceos/citizens-guide-us-federal-law-obscenity</a></span></li>
+<li id="cite_note-AUGOV"><span class="mw-cite-backlink"><b><a href="#cite_ref-AUGOV" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">Antonia Quadara, Alissar El-Murr. The effects of pornography on children and young people. Australian Institute of Family Studies. (2017-12)[2023-11-11].&nbsp;<a href="https://aifs.gov.au/research/research-snapshots/effects-pornography-children-and-young-people">https://aifs.gov.au/research/research-snapshots/effects-pornography-children-and-young-people</a></span></li>
+<li id="cite_note-UNICEF"><span class="mw-cite-backlink"><b><a href="#cite_ref-UNICEF" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">UNICEF. Protection of children from the harmful impacts of pornography - Pornographic content can harm children. UNICEF. [2023-11-11].&nbsp;<a href="https://www.unicef.org/harmful-content-online">https://www.unicef.org/harmful-content-online</a></span></li>
 
 </ol>
- <h2>版权</h2>
+<h2>版权</h2>
 <h3>正文内容</h3>
 <p>详见<a href="/general/copyright">版权许可</a>。</p>
 <h3>图片来源</h3>
 <p>本页图片来自互联网，且均在版权合规要求下使用。</p>
+
 <table class="table table-bordered" style="overflow:auto">
-	<tbody>
-		<tr><th>图片编号</th><th>作者</th><th>来源</th></tr>
-		<tr>
-			<td>封面</td>
-			<td><a href="https://unsplash.com/@aridley88">Andrew Ridley</a></td>
-			<td><a href="https://unsplash.com/photos/jR4Zf-riEjI">Unsplash</a></td>
-		</tr>
-		<tr>
-			<td>图 1</td>
-			<td>Gilbert Baker</td>
-			<td>公有领域</td>
-		</tr>
-  </tbody>
+    <tbody>
+        <tr>
+            <th>图片编号</th>
+            <th>作者</th>
+            <th>来源</th>
+        </tr>  
+        <tr>
+            <td>封面</td>
+            <td><a href="https://unsplash.com/@freestocks">freestocks</a></td>
+            <td><a href="https://unsplash.com/photos/assorted-book-lot-YTUZcmmf1eU">Unsplash</a></td>
+        </tr>
+    </tbody>
 </table>
+
 				</div>
 			</div>
 		</article>
@@ -357,7 +341,8 @@
 									</p>
 			</div>
 					</footer>
-				<script src="/script/script.js"></script>
+		<!-- 额外脚本 -->
+		<script src="/script/script.js"></script>
 		<script src="/script/domain-check.js"></script>
 				<script>
 			// Dark mode requires
