--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -174,6 +174,9 @@
       <div class="col py-2">
         <a href="/main/contraception">避孕</a>
       </div>
+      <div class="col py-2">
+        <a href="/main/sex-and-information">性和信息</a>
+      </div>
     </div>
 
     <div class="col-12 py-2 mt-3">
