--- a/main/sex-and-information/index.html
+++ b/main/sex-and-information/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="在浩如烟海的信息中筛选出有价值的信息、辨别虚假信息。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
-	<meta property="og:title" content="性和信息" />
+	<meta property="og:title" content="性与信息" />
 	<meta property="og:description" content="在浩如烟海的信息中筛选出有价值的信息、辨别虚假信息。" />
 	<meta property="og:locale" content="zh_CN" />
 	<meta property="og:site_name" content="KnowSex" />
@@ -23,7 +23,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>性和信息 - KnowSex</title>
+	<title>性与信息 - KnowSex</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -148,7 +148,7 @@
 				<div class="header-img si-bg"></div>
 				<div class="header-cover">
 					<div class="header-title">
-						<h1 itemprop="headline">性和信息</h1>
+						<h1 itemprop="headline">性与信息</h1>
 						<p>Sex and Information</p>
 					</div>
 				</div>
