--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -175,7 +175,7 @@
         <a href="/main/contraception">避孕</a>
       </div>
       <div class="col py-2">
-        <a href="/main/sex-and-information">性和信息</a>
+        <a href="/main/sex-and-information">性与信息</a>
       </div>
     </div>
 
