--- a/main/sex-and-information/index.html
+++ b/main/sex-and-information/index.html
@@ -173,12 +173,12 @@
 <h2>色情作品与性教育</h2>
 <p>色情作品一般是为达到性刺激而描绘裸体、性行为的材料。<sup id="cite_ref-cornell" class="reference"><a href="#cite_note-cornell" target="_self" aria-label="佐证资料">[1]</a></sup><sup id="cite_ref-USGOV" class="reference"><a href="#cite_note-USGOV" target="_self" aria-label="佐证资料">[2]</a></sup>作品有多种表达方式，如图像、视频、音频、文字、电子游戏等。</p>
 <p>儿童接触到露骨的色情作品，对其心理健康不利。年龄较小的儿童（9 ~ 12 岁）容易因色情作品感到不安。不应让儿童接触到色情作品。 <sup id="cite_ref-AUGOV" class="reference"><a href="#cite_note-AUGOV" target="_self" aria-label="佐证资料">[3]</a></sup><sup id="cite_ref-UNICEF" class="reference"><a href="#cite_note-UNICEF" target="_self" aria-label="佐证资料">[4]</a></sup></p>
-<p><span class="key">从色情作品中获取性教育信息是不当的。</span>色情作品也通常是性相关信息的来源，但并不是可靠来源。为达到视觉效果，一些色情内容呈现的性相关信息并不像真实情况。这些内容可能包含错误地性知识、有害的社会性别刻板印象，使观众对性行为、性反应和身体外表有不切实际的认知和期望。</p>
+<p><span class="key">从色情作品中获取性教育信息是不当的。</span>色情作品也通常是性相关信息的来源，但并不是<strong>可靠来源</strong>。为达到视觉效果，一些色情内容呈现的性相关信息并不像真实情况。这些内容可能包含错误地性知识、有害的社会性别刻板印象，使观众对性行为、性反应和身体外表有不切实际的认知和期望。</p>
 <p>正如动画片、电影、小说中可能会描绘夸张的情节，不能与现实生活相提并论，色情作品也是如此。色情作品中所描绘的性的标准未必适用于现实生活。</p>
 <p>在不同的司法管辖区，色情作品的法律地位不同，受到不同程度的管制。这与当地历史、文化、宗教、政治、社会环境、色情作品的内容接受度等因素有关。</p>
 <h2>社交媒体与性骚扰</h2>
 <p>在社交媒体上，我们可能会遇到一些不希望的性关注。这种性关注有一部分属于性骚扰。</p>
-<p>如果你不愿意，没有人有权利触碰你。在互联网上也应当如此。<strong>接收到不被希望的性关注时，并不是你的错。</strong></p>
+<p>如果你不愿意，没有人有权利触碰你。在互联网上也应当如此。<span class="key">接收到不被希望的性关注时，并不是你的错。</span></p>
 <p>不要对他人送去不被希望的性关注，在互联网上也要与他人保持界限。同样地，如果有人对你送来不被希望的性关注，你也有权利拒绝。拉黑、举报这些消息，涉及违法犯罪时可以向警方和法院寻求帮助。</p>
 <p>你也可以和你信任的成年人谈论这些问题，以得到帮助。</p>
 
