--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 			    <div class="main">
                                         <p class="bg-light tip-bar" style="text-align: left;">
-            <span class="darkmode-ignore">🔖</span> 请收藏我们的网址 <code>knowsex.net</code> 以备不时之需。<a href="https://post.knowsex.net/archives/how-to-visit-again">了解如何再度访问...</a>
+            <span class="darkmode-ignore">🔖</span> 请收藏我们的网址 <code>www.knowsex.net</code> 以备不时之需。<a href="https://post.knowsex.net/archives/how-to-visit-again">了解如何再度访问...</a>
         </p>
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
