--- a/main/human-reproductive-system/index.html
+++ b/main/human-reproductive-system/index.html
@@ -175,11 +175,11 @@
 		<h2 id="女性生殖系统">女性生殖系统</h2>
 		<div class="row show">
 			<div class="col-md-6 img-box">
-				<img loading="lazy" src="img/111.jpg" class="img-thumbnail thumb" alt="图 1，张开的女性阴部（外生殖器）">
+				<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/111.jpg" class="img-thumbnail thumb" alt="图 1，张开的女性阴部（外生殖器）">
 				<br><small>图 1 张开的女性阴部（外生殖器），图中没有描述阴毛</small>
 			</div>
 			<div class="col-md-6 img-box">
-				<img loading="lazy" src="img/114.jpg" class="img-thumbnail thumb" alt="图 2，女性生殖系统">
+				<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/114.jpg" class="img-thumbnail thumb" alt="图 2，女性生殖系统">
 				<br><small>图 2 女性生殖系统</small>
 			</div>
 		</div>
@@ -234,10 +234,10 @@
 		</div>
 		<p>受到外界刺激时，阴蒂有可能会勃起变得大而坚硬，阴唇肿胀，阴道变得湿润。</p>
 		<p>阴蒂会在夜间或晨间刚睡醒时自发勃起，是正常现象。</p>
-		<img loading="lazy" src="img/115.jpg" class="img-thumbnail thumb" alt="图 3，女性的性兴奋，阴蒂勃起变得大而坚硬，阴唇肿胀，阴道变得湿润。">
+		<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/115.jpg" class="img-thumbnail thumb" alt="图 3，女性的性兴奋，阴蒂勃起变得大而坚硬，阴唇肿胀，阴道变得湿润。">
 		<br><small>图 3 女性的性兴奋</small><br><br>
 		<p>阴唇的外观是多样的<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[11]</a></sup>，不同的人在颜色、大小等方面存在着差异。</p>
-		<img loading="lazy" src="img/Genital_Diversity_Expanded.jpg" class="img-thumbnail thumb" alt="图 4，不同外形的女阴，在外形上存在着差异。有些颜色是偏黑色的，有些是偏粉色的。有一些小阴唇很大，有一些则很小。">
+		<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/Genital_Diversity_Expanded.jpg" class="img-thumbnail thumb" alt="图 4，不同外形的女阴，在外形上存在着差异。有些颜色是偏黑色的，有些是偏粉色的。有一些小阴唇很大，有一些则很小。">
 		<br><small>图 4 不同外形的女阴，其中一部分去除过阴毛</small>
 		<h3>乳房</h3>
 		<p>在生物学上，乳房并不属于生殖系统，但乳房与性和生殖密切相关。</p>
@@ -245,13 +245,13 @@
 		<p>从生殖意义角度，乳房用于哺育后代。乳房中分泌<strong>乳汁</strong>的器官叫做<strong>乳腺</strong>。在哺乳期，乳汁经由乳头排到婴儿口中。</p>
 		<p>乳房的大小、形状和哺乳能力、性反应能力无关。<sup id="cite_ref-乳房大小与泌乳关系" class="reference"><a href="#cite_note-乳房大小与泌乳关系" target="_self" aria-label="佐证资料">[6]</a></sup><sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[11]</a></sup></p>
 		<p>女性的乳房在青春期开始发育。可能一侧乳房发育得更快而导致不对称，但最终会发育得基本相等。随着年龄的增长，维持乳房形态的韧带可能会松驰，乳房下垂。这些都是正常的生理变化。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[11]</a></sup></p>
-		<img loading="lazy" src="img/Weibliche_brust.jpg" class="img-thumbnail thumb" alt="图 5，乳头是乳房上的突起，乳头周围有较深颜色的乳晕。">
+		<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/Weibliche_brust.jpg" class="img-thumbnail thumb" alt="图 5，乳头是乳房上的突起，乳头周围有较深颜色的乳晕。">
 		<br>
 		<small>图 5 乳房、乳晕和乳头</small>
 
 		<h3>处女膜<sup id="cite_ref-术语在线-处女膜" class="reference"><a href="#cite_note-术语在线-处女膜" target="_self" aria-label="佐证资料">[8]</a></sup><sup id="cite_ref-术语在线-处女膜闭锁" class="reference"><a href="#cite_note-术语在线-处女膜闭锁" target="_self" aria-label="佐证资料">[9]</a></sup></h3>
 		<!--
-			<img loading="lazy" src="img/115.png" class="img-thumbnail thumb" alt="图 3，其中四种形态的处女膜"><br>
+			<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/115.png" class="img-thumbnail thumb" alt="图 3，其中四种形态的处女膜"><br>
 			<small>图 3 其中四种形态的处女膜：（A）新月形；（B）环形；（C）领口形；（D）中隔分离形。</small><br><br>
 		-->
 
@@ -259,7 +259,7 @@
 		<p>囿于“处女”二字，处女膜不完整被广泛误认为是发生过初次阴道性行为的依据。事实上，包括创伤、自慰、医学检查、剧烈运动、发生性行为等都有可能导致处女膜的破裂<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[11]</a></sup>，导致暂时性的出血和疼痛。<sup id="cite_ref-处女膜" class="reference"><a href="#cite_note-处女膜" target="_self" aria-label="佐证资料">[7]</a></sup>以及，即使发生过经阴道的性行为，处女膜也并不一定会破裂。<sup id="cite_ref-多次发生性行为处女膜完整一例" class="reference"><a href="#cite_note-多次发生性行为处女膜完整一例" target="_self" aria-label="佐证资料">[12]</a></sup></p>
 		<p><span class="key">许多人认为处女膜是一层覆盖于阴道口的完整膜，这一观点是错误的</span>，只有少数女性的处女膜上没有空隙<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[11]</a></sup>，病理学称之为“闭锁”<sup id="cite_ref-处女膜" class="reference"><a href="#cite_note-处女膜" target="_self" aria-label="佐证资料">[7]</a></sup><sup id="cite_ref-术语在线-处女膜闭锁" class="reference"><a href="#cite_note-术语在线-处女膜闭锁" target="_self" aria-label="佐证资料">[9]</a></sup>，而且这种情况通常需要手术治疗<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup>。</p>
 
-		<img loading="lazy" src="img/hymen.jpg" class="img-thumbnail thumb" alt="图 6，处女膜的其中四种形态">
+		<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/hymen.jpg" class="img-thumbnail thumb" alt="图 6，处女膜的其中四种形态">
 		<br>
 		<small>图 6 处女膜的其中四种形态</small>
 		<!-- <p>您可以通过点击下方按钮阅读美国家庭医师学会（AAFP）的文章《评估儿童的性虐待》（Evaluating the Child for Sexual Abuse）查看有关处女膜的照片。</p>
@@ -275,7 +275,7 @@
 		<!-- <div class="img-block"> -->
 		<div class="row show">
 			<div class="col-md-6 img-box">
-				<img loading="lazy" src="img/Image_of_an_Ovary.jpg" class="img-thumbnail thumb" alt="图 7，单侧的卵巢示意图">
+				<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/Image_of_an_Ovary.jpg" class="img-thumbnail thumb" alt="图 7，单侧的卵巢示意图">
 				<br><small>图 7 卵巢示意图（单侧）</small>
 			</div>
 			<div class="col-md-6 img-box">
@@ -297,11 +297,11 @@
 		<p>月经周期中的排卵是生殖所需的关键身体机能。</p>
 		<div class="row show">
 			<div class="col-md-6 img-box">
-				<img loading="lazy" src="img/MenstrualCycle_zh_hans.jpg" class="img-thumbnail thumb" alt="图 8，月经周期">
+				<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/MenstrualCycle_zh_hans.jpg" class="img-thumbnail thumb" alt="图 8，月经周期">
 				<br><small>图 8 月经周期</small>
 			</div>
 			<!-- <div class="col-md-6 img-box">
-				<img loading="lazy" src="img/menstruation_uterus.jpg" class="img-thumbnail thumb" alt="图 8，生理期期间的子宫示意图">
+				<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/menstruation_uterus.jpg" class="img-thumbnail thumb" alt="图 8，生理期期间的子宫示意图">
 				<br><small>图 8 生理期期间的子宫示意图</small><br>
 			</div> -->
 		</div>
@@ -341,11 +341,11 @@
 		 <h2 id="男性生殖系统">男性生殖系统</h2>
 		<div class="row show">
 			<div class="col-md-6">
-				<img loading="lazy" src="img/121.jpg" class="img-thumbnail thumb" alt="图 9， 亚洲男性外生殖器（疲软状态，包皮覆盖）">
+				<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/121.jpg" class="img-thumbnail thumb" alt="图 9， 亚洲男性外生殖器（疲软状态，包皮覆盖）">
 				<br><small>图 9 亚洲男性外生殖器（疲软状态，包皮覆盖）</small>
 			</div>
 			<div class="col-md-6">
-				<img loading="lazy" src="img/122.jpg" class="img-thumbnail thumb" alt="图 10，阴茎（系带面，包皮翻开）">
+				<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/122.jpg" class="img-thumbnail thumb" alt="图 10，阴茎（系带面，包皮翻开）">
 				<br><small>图 10 阴茎（系带面，包皮翻开）</small>
 			</div>
 		</div><br>
@@ -391,7 +391,7 @@
 			</ul>
 
 		</div>
-		<img loading="lazy" src="img/123.jpg" class="img-thumbnail thumb" alt="图 11，男性生殖系统"><br>
+		<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/123.jpg" class="img-thumbnail thumb" alt="图 11，男性生殖系统"><br>
 		<small>图 11 男性生殖系统</small>
 		<p>阴茎在受到刺激时会<strong>勃起</strong>。阴茎勃起过程中会<strong>充血</strong>，可迅速地增大、变硬。完全勃起的情况下，阴茎体部会呈坚硬状态。</p>
 		<p>男性在受到性刺激时会由尿道口分泌透明无色而略粘稠的预射精液<sup id="cite_ref-阴茎与睾丸等器官的性反应" class="reference"><a href="#cite_note-阴茎与睾丸等器官的性反应" target="_self" aria-label="佐证资料">[19]</a></sup> （又作尿道球腺液，<span class="key">常被误认为是前列腺液</span>）。</p> 
@@ -401,10 +401,10 @@
 		<p>阴茎会在夜间或晨间刚睡醒时自发勃起，是正常现象。</p>
 		<p><strong>睾丸</strong>主要作用是产生精子和分泌<strong>雄性激素</strong>（主要是睾酮）。</p>
 		<!-- </div> -->
-		<img loading="lazy" src="img/122_1.jpg" class="img-thumbnail thumb" alt="图 12，男性的性兴奋，阴茎变大并变硬。">
+		<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/122_1.jpg" class="img-thumbnail thumb" alt="图 12，男性的性兴奋，阴茎变大并变硬。">
 		<br><small>图 12 男性的性兴奋</small><br><br>
 		<p>阴茎的外观是多样的，不同的人在颜色、大小等方面存在着差异，在勃起时的外观也不尽相同。有些阴茎在勃起时会观察到一定弧度的弯曲。</p>
-		<img loading="lazy" src="img/Various_size_penises.jpg" class="img-thumbnail thumb" alt="图 13，不同外形的阴茎。阴茎在外形上存在着差异。">
+		<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/Various_size_penises.jpg" class="img-thumbnail thumb" alt="图 13，不同外形的阴茎。阴茎在外形上存在着差异。">
 		<br><small>图 13 不同外形的、勃起状态的阴茎，其中一部分去除过阴毛</small>
 
 		<h3>包皮</h3>
@@ -427,7 +427,7 @@
 		<p>
 			在受到<strong>性刺激</strong>一段时间后，包含有精子的精液会经勃起的阴茎的尿道口射出，此过程称为<strong>射精</strong>。射精是生殖所需的关键身体机能。
 		</p>
-		<img loading="lazy" src="img/124.jpg" class="img-thumbnail thumb" alt="图 14，未液化的精液"><br>
+		<img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/124.jpg" class="img-thumbnail thumb" alt="图 14，未液化的精液"><br>
 		<small>图 14 精液（未液化）</small>
 		<h3>遗精</h3>
 		<p>
