--- a/main/contraception/index.html
+++ b/main/contraception/index.html
@@ -180,11 +180,11 @@
         <p>如果能够阻止精子与卵细胞相遇、结合，或是干扰着床过程，就可能达到避孕的目的。</p>
         <div class="row show">
           <div class="col-md-6">
-            <img loading="lazy" src="img/精子行进方向.jpg" class="img-thumbnail thumb" alt="图 1,精子途经阴道、子宫颈、子宫、输卵管。"><br>
+            <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/精子行进方向.jpg" class="img-thumbnail thumb" alt="图 1,精子途经阴道、子宫颈、子宫、输卵管。"><br>
             <small>图 1 精子行进方向，途经阴道 — 子宫颈 — 子宫 — 输卵管</small>
           </div>
           <div class="col-md-6">
-            <img loading="lazy" src="img/uterus-15-edited.png" class="img-thumbnail thumb" alt="图 2,精子与卵细胞在输卵管相遇结合，并在子宫内着床"><br>
+            <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/uterus-15-edited.png" class="img-thumbnail thumb" alt="图 2,精子与卵细胞在输卵管相遇结合，并在子宫内着床"><br>
             <small>图 2 输卵管特写，卵细胞与精子（图中示意为蓝色）结合并在子宫内着床</small><br>
           </div>
         </div><br>
@@ -205,7 +205,7 @@
         <p>囿于男性和女性的生理差异，男性避孕药的研究和推广较为滞后，尚未商业化使用，不过一些药物正在开发中。因此，以下介绍的为女性使用的避孕药物。</p>
         <p><strong>复方口服避孕药</strong>含有低剂量的雌激素和孕激素，通过上述多环节共同作用达到避孕效果。</p>
         <p>口服避孕药包括<strong>复方短效口服避孕药</strong>（每天一次）和<strong>复方长效口服避孕药</strong>（每月一次）。目前，<strong>长效口服避孕药</strong>几乎由于激素含量较高，已趋于淘汰。本文将只介绍<strong>短效口服避孕药</strong>。</p>
-        <img loading="lazy" src="img/1.jpg" class="img-thumbnail thumb" alt="图 3,短效口服避孕药"><br>
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/1.jpg" class="img-thumbnail thumb" alt="图 3,短效口服避孕药"><br>
     <small>图 3 短效口服避孕药</small><br>
         <p>短效口服避孕药是目前最常见的避孕药。若女性正确地根据药物说明，每日规律服用这种药，避孕率接近 100%。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup><sup id="cite_ref-复方口服避孕药临床应用中国专家共识" class="reference"><a href="#cite_note-复方口服避孕药临床应用中国专家共识" target="_self" aria-label="佐证资料">[4]</a></sup></p>
         <p>目前中国常见的药物多为每板 21 片装，一般从月经周期的第一天开始服用，连服 21 天后停服 7 天，接着继续服用（以药品说明书为准）。也有28片装，其中7片是安慰剂或其他补铁剂等药物。</p>
@@ -221,22 +221,22 @@
         </ul>
         <div class="row show">
       <div class="col-md-6">
-        <img loading="lazy" src="img/2.jpg" class="img-thumbnail thumb" alt="图 4， 一种皮下埋植剂">
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/2.jpg" class="img-thumbnail thumb" alt="图 4， 一种皮下埋植剂">
         <br><small>图 4 一种皮下埋植剂</small>
       </div>
       <div class="col-md-6">
-        <img loading="lazy" src="img/3.jpg" class="img-thumbnail thumb" alt="图 5 ，植入皮下埋植剂（视频截图）">
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/3.jpg" class="img-thumbnail thumb" alt="图 5 ，植入皮下埋植剂（视频截图）">
         <br><small>图 5 植入皮下埋植剂（视频截图）</small>
       </div>
     </div>
         <p><strong>皮下埋植剂</strong>通过进行手术埋植于皮下，缓慢释放激素以达到避孕目的，有效期在 3 年左右。到期后需要手术取出。<sup id="cite_ref-健康的性" class="reference"><a href="#cite_note-健康的性" target="_self" aria-label="佐证资料">[2]</a></sup><sup id="cite_ref-依托孕烯皮下埋植剂使用现状调查研究" class="reference"><a href="#cite_note-依托孕烯皮下埋植剂使用现状调查研究" target="_self" aria-label="佐证资料">[3]</a></sup></p>
         <div class="row show">
       <div class="col-md-6">
-        <img loading="lazy" src="img/4.jpg" class="img-thumbnail thumb" alt="图 6， 避孕贴片">
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/4.jpg" class="img-thumbnail thumb" alt="图 6， 避孕贴片">
         <br><small>图 6 避孕贴片</small>
       </div>
       <div class="col-md-6">
-        <img loading="lazy" src="img/5.jpg" class="img-thumbnail thumb" alt="图 7， 阴道避孕环">
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/5.jpg" class="img-thumbnail thumb" alt="图 7， 阴道避孕环">
         <br><small>图 7 阴道避孕环</small>
       </div>
     </div>
@@ -246,11 +246,11 @@
         
          <h2>工具避孕</h2>
         <h3>避孕套</h3>
-        <p><img loading="lazy" src="img/6.jpg" class="img-thumbnail thumb" alt="图 8，女用、男用避孕套"><br>
+        <p><img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/6.jpg" class="img-thumbnail thumb" alt="图 8，女用、男用避孕套"><br>
         <small>图 8 女用、男用避孕套</small><br>
-        <img loading="lazy" src="img/7.jpg" class="img-thumbnail thumb" alt="图 9,展开的男用避孕套"><br>
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/7.jpg" class="img-thumbnail thumb" alt="图 9,展开的男用避孕套"><br>
         <small>图 9 展开的男用避孕套</small><br>
-        <img loading="lazy" src="img/8.jpg" class="img-thumbnail thumb" alt="图 10,展开的女用避孕套"><br>
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/8.jpg" class="img-thumbnail thumb" alt="图 10,展开的女用避孕套"><br>
         <small>图 10 展开的女用避孕套</small><br>
         <p><strong>避孕套</strong>，亦作<strong>安全套</strong>、<strong>保险套</strong>、<strong>卫生套</strong>等，是一种护套形的屏障器具，主要应用于性交过程中，用以降低感染性传播疾病和女性怀孕的风险。避孕套均为一次使用器具，在使用后应当丢弃。</p>
         <p>市面上常见的避孕套多为用于套在阴茎上使用的阴茎套，也可以在一些购物平台上买到用于置入阴道内的女用避孕套（也作&ldquo;<strong>阴道套</strong>&rdquo;）。在进行性行为时，男用避孕套和女用避孕套选其一即可，两者同时使用可能会因摩擦而增大避孕套破裂的风险。<sup id="cite_ref-FCWCD" class="reference"><a href="#cite_note-FCWCD" target="_self" aria-label="佐证资料">[14]</a></sup></p>
@@ -260,10 +260,10 @@
         <p><a class="btn btn-outline-secondary" role="button" href="https://zh.wikihow.com/%E4%BD%BF%E7%94%A8%E9%81%BF%E5%AD%95%E5%A5%97">如何使用避孕套 - wikiHow</a> （阴茎套）</p>
         <p><a class="btn btn-outline-secondary" role="button" href="https://zh.wikihow.com/%E4%BD%BF%E7%94%A8%E5%A5%B3%E7%94%A8%E9%81%BF%E5%AD%95%E5%A5%97">如何使用女用避孕套 - wikiHow</a></p>
         <p>男用避孕套较为常见，可在超市、便利店、药店等地方买到，在部分地区的街边和公共洗手间、高校的校医院等地也可以领取免费的避孕套。女用的避孕套可能在网上更容易买到。</p>
-        <img loading="lazy" src="img/9.jpg" class="img-thumbnail thumb" alt="图 11 带有“国家免费提供”字样的避孕套外包装"><br>
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/9.jpg" class="img-thumbnail thumb" alt="图 11 带有“国家免费提供”字样的避孕套外包装"><br>
         <small>图 11 带有“国家免费提供”字样的避孕套外包装</small><br>
         <h3>宫内节育器</h3>
-        <img loading="lazy" src="img/10.jpg" class="img-thumbnail thumb" alt="图 12， 一种宫内节育器"><br>
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/10.jpg" class="img-thumbnail thumb" alt="图 12， 一种宫内节育器"><br>
         <small>图 12 一种宫内节育器</small><br>
         <p>宫内节育器（IUD）是中国已婚女性主要的避孕措施，其中以<strong>含铜宫内节育器</strong>应用最为广泛，含较强抗生育能力的铜离子。此外，还有含有激素或药物的<strong>含药宫内节育器</strong>。宫内节育器需要去医院进行安放，一般可放置数年。</p>
         
@@ -296,7 +296,7 @@
         <p>尽管现代避孕的成功率已大大提升，但仍有几率发生非意愿怀孕。</p>
         <p>在性行为后，若女方月经延迟一周没有来，则要高度怀疑意外怀孕的可能性。在正常情况下，女性月经周期推后约两周就可以进行检测是否怀孕（验孕）。但无论是否怀孕，无故月经推迟较久时间也是应到医院就诊的情况。</p>
         <p>正常情况下，可从怀孕的女性体内检出<strong>人绒毛膜促性腺激素（hCG）</strong>，且 hCG 仅于怀孕的女性体内发现。因此 <strong>hCG 试验</strong>是可靠的验孕方式。常用的一个方法是用尿样检测其 hCG 含量，于 7 ~ 12 天内可检出。可以在药店买到相关的验孕器具。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[13]</a></sup></p>
-        <img loading="lazy" src="img/Zwangerschapstesten.jpg" class="img-thumbnail thumb" alt="图 13， 验孕棒，一种检测怀孕的器具，形状像一根笔，外观扁平，有一观察区域显示测试结果。"><br>
+        <img loading="lazy" src="https://knowsex.net/main/human-reproductive-system/img/Zwangerschapstesten.jpg" class="img-thumbnail thumb" alt="图 13， 验孕棒，一种检测怀孕的器具，形状像一根笔，外观扁平，有一观察区域显示测试结果。"><br>
         <small>图 13 hCG 试验器具——验孕棒</small><br><br>
         <p>考虑到受到各种因素影响，使用试验的方法可能会产生假阳性或假阴性结果。最终确定怀孕要依靠以下三种手段之一：<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[13]</a></sup></p>
         <ul>
